fix: fixed some gaps and margins, feat: dribble respoonds to viewport

--- a/src/sass/components/_project.scss
+++ b/src/sass/components/_project.scss
@@ -18,6 +18,10 @@
 		width: 100%;
 		padding: 3rem;
 		margin-bottom: 2rem;
+
+		& > :not(:last-child) {
+			margin-bottom: 3rem;
+		}
 	}
 
 	&__link {
