--- a/src/sass/layout/_projects.scss
+++ b/src/sass/layout/_projects.scss
@@ -8,7 +8,7 @@
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: repeat(14, minmax(min-content, 21rem));
 	grid-auto-flow: column;
-	row-gap: 3vh;
+	row-gap: 5vh;
 	column-gap: 3vw;
 
 	@include respond (tab-port) {
