--- a/src/sass/layout/_work.scss
+++ b/src/sass/layout/_work.scss
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: min-content;
-	row-gap: 3vh;
+	row-gap: 5vh;
 	column-gap: 1vw;
 
 	width: 100%;
